# copilot-trace

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: PLAN.md  USAGE.md
parser/: __init__.py  api.py  cli.py  copilot_parser.py  evaluation.py  mlflow_export.py  mlflow_import.py  storage.py
scripts/: import_bundle_to_mlflow.py  ingest.sh  install.sh  run-api.sh  run-ui.sh
tests/: test_parser.py
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.test.tsx  App.tsx  main.tsx  types.ts
ui/src/components/: JsonViewer.tsx  TraceTree.tsx  TraceVisualizer.tsx  traceTreeUtils.test.ts  traceTreeUtils.ts
ui/src/data/: sample.ts
ui/src/lib/: appConfig.ts  appUtils.tsx
ui/src/pages/: DashboardPage.tsx  EvaluationPage.tsx  ParserPage.test.tsx  ParserPage.tsx
